--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -20,6 +20,7 @@ jobs:
 
     - name: Build
       run: |
+        npm install -g wasm4
         npm install
         npm run build
         w4 bundle build/cart.wasm --html dist/index.html --title Freg
