--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "build:resources": "w4 png2src -t res/template.ts res/door.png res/frog.png res/frog-eyes.png res/frog-walking-1.png res/frog-walking-2.png res/frog-walking-eyes.png res/frog-jumping.png res/frog-jumping-eyes.png res/frog-falling.png res/frog-falling-eyes.png res/frog-sleeping-1.png res/frog-sleeping-1-eyes.png res/frog-sleeping-2.png res/frog-sleeping-2-eyes.png res/egg.png res/egg8.png -o src/sprites.ts",
-    "build": "npm run build:resources && asc --target release",
+    "build:levels": "node ./scripts/parse-level.mjs src/game/levels/layout.ts levels/level-1.txt levels/level-2.txt levels/level-3.txt levels/level-4.txt levels/level-5.txt levels/level-6.txt levels/level-7.txt levels/level-8.txt levels/level-9.txt",
+    "build": "npm run build:resources && npm run build:levels && asc --target release",
     "build:debug": "asc --target debug",
     "start": "w4 run build/cart.wasm",
-    "dev": "npm run build:resources && w4 watch --no-qr"
+    "dev": "npm run build:resources && npm run build:levels && w4 watch --no-qr"
   },
   "devDependencies": {
     "assemblyscript": "^0.21.3"
